--- a/css/styles.css
+++ b/css/styles.css
@@ -38,5 +38,10 @@ body{
 tr:hover {
     background-color:#dbb08db0!important
 }
-
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+  }
 
