--- a/css/styles.css
+++ b/css/styles.css
@@ -45,3 +45,15 @@ tr:hover {
     padding: 10px;
   }
 
+  .carousel {
+    background:#914d15b0
+}
+.carousel-item {
+  height: 300px;
+}
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
